[gd_scene load_steps=2 format=3 uid="uid://v37ldfhngnay"]

[ext_resource type="Script" uid="uid://frq7y6fpqjik" path="res://scripts/scenes/main_menu.gd" id="1_yqorp"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")
metadata/_edit_lock_ = true

[node name="TitleHBox" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 500.0

[node name="Title_Label" type="Label" parent="TitleHBox"]
layout_mode = 2
size_flags_horizontal = 6
text = "Pong Duel"

[node name="Button HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -460.0
offset_right = 1280.0
grow_vertical = 0

[node name="Button VBox" type="VBoxContainer" parent="Button HBox"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Start Game Button" type="Button" parent="Button HBox/Button VBox"]
layout_mode = 2
text = "Start Game"

[node name="Survival Button" type="Button" parent="Button HBox/Button VBox"]
layout_mode = 2
text = "Survival Mode"

[node name="How to Play Button" type="Button" parent="Button HBox/Button VBox"]
layout_mode = 2
text = "How to Play"

[node name="Quit Button" type="Button" parent="Button HBox/Button VBox"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="Button HBox/Button VBox/Start Game Button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Button HBox/Button VBox/How to Play Button" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="Button HBox/Button VBox/Quit Button" to="." method="_on_quit_button_pressed"]
